# Deonar-AI

./: .gitignore  DOCUMENTATION.md  Deonar_AI_Project_Report.docx  README.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
models/: README.md
src/app/: multi_threaded.py  runner.py  single_threaded.py
src/capture/: stream.py  worker.py
src/counting/: counting_core_logic.py  state.py
src/counting/counting_modes/: counting_modes.py  dual_lines.py  init_counting_modes.py  zone.py
src/display/: drawing.py  publish_ws.py  webrtc_page.py  webrtc_server.py  worker.py
src/geometry/: geom.py
src/infer/: loader.py  worker.py  yolo_infer.py
src/io/: io.py
src/runtime/: pacing.py
src/runtime_configs/: bytetrack_cfg.py  config.py  tracker_cfg.py
src/setup_installer_enhanced/: __init__.py  cli.py  constants.py  core.py  utils.py
src/slots/: contracts.py  slot_csv_writer.py  slot_manager.py  slot_summary_generator.py
src/slots/api/: routes.py  schemas.py  server.py
src/utils/: logger.py  metrics.py  pacing_contract_dict.py  progress.py  video_recorder.py
src/viz/: _colors.py  _labels.py  _shapes.py  animator.py  colorer.py  draw.py  pretty.py
utils/: fake_producer.bat  s3_uploader.py  upload_to_huggingface.py
